fixes skill header alignment issue

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -1144,6 +1144,7 @@ input.sheet-expand:checked ~ .sheet-survival-row2 {
   box-sizing: border-box;
   margin: 0;
   border: 2px dotted #c3996b;
+  width: 100%;
 }
 
 input.sheet-expand:checked ~ .sheet-input-textarea {
@@ -2518,33 +2519,21 @@ input.sheet-monster_only:checked ~ div.sheet-character .sheet-skills-grid button
 .sheet-skills-box1 {
   grid-column: 1/6;
   grid-row-start: 1;
-  grid-template-columns: auto 2em 2em 2em 2em;
+  grid-template-columns: auto 2em 2em 2em 2em 2em;
   background-color: #000;
-  height: 1.1em;
 }
 
-.sheet-skills-row2-body {
-  display: grid;
-  grid-column: 1/6;
-  grid-row-start: 2;
-  grid-template-columns: auto 2em 2em 2em 2em;
-  height: 1.2em;
-  align-content: end;
+.sheet-skills-box2 {
+  grid-column: 2/3;
+  grid-row-start: 1;
 }
 
-.sheet-skills-box5 {
-  grid-column-start: 1;
-  grid-row-start: 1;
-}
-.sheet-skills-box6 {
-  grid-column-start: 2;
-  grid-row-start: 1;
-}
-.sheet-skills-box7 {
+.sheet-skills-box3 {
   grid-column-start: 3;
   grid-row-start: 1;
 }
-.sheet-skills-box8 {
+
+.sheet-skills-box4 {
   grid-column-start: 4;
   grid-row-start: 1;
 }
@@ -2598,6 +2587,10 @@ input.sheet-monster_only:checked ~ div.sheet-character .sheet-skills-grid button
 .sheet-skills-box10 {
   grid-column-start: 5;
   grid-row-start: 1;
+}
+.sheet-skills-grid button {
+  text-align: left;
+  padding-left: 1.5em;
 }
 
 /* ---------------------------------- Armor/Helmet */
